--- a/src/GUI/AppGUI.form
+++ b/src/GUI/AppGUI.form
@@ -1,39 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AppGUI">
-  <grid id="27dc6" binding="appMain" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="appMain" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="492" height="250"/>
     </constraints>
-    <properties/>
+    <properties>
+      <autoscrolls value="true"/>
+      <background color="-9259800"/>
+    </properties>
     <border type="none"/>
     <children>
-      <component id="67cda" class="javax.swing.JButton" binding="esciButton" default-binding="true">
+      <component id="42fa6" class="javax.swing.JButton" binding="impostazioniButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="142" height="32"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-2430744"/>
+          <hideActionText value="false"/>
+          <text value="Impostazioni"/>
+        </properties>
+      </component>
+      <component id="c9caa" class="javax.swing.JButton" binding="INIZIAButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="318" height="32"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-2430744"/>
+          <enabled value="false"/>
+          <hideActionText value="true"/>
+          <horizontalTextPosition value="2"/>
+          <text value=" INIZIA"/>
+        </properties>
+      </component>
+      <component id="2c30b" class="javax.swing.JButton" binding="BTNchoooseStudent">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="318" height="32"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-2430744"/>
+          <enabled value="true"/>
+          <hideActionText value="true"/>
+          <horizontalTextPosition value="2"/>
+          <text value=" Scegli Studente"/>
+        </properties>
+      </component>
+      <component id="55940" class="javax.swing.JButton" binding="BTNchooseClass">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Esci"/>
+          <text value="Scegli Classe"/>
         </properties>
       </component>
-      <vspacer id="cabab">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="42fa6" class="javax.swing.JButton" binding="impostazioniButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Impostazioni"/>
-        </properties>
-      </component>
-      <hspacer id="8386c">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
     </children>
   </grid>
 </form>
