--- a/src/GUI/AppGUI.form
+++ b/src/GUI/AppGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AppGUI">
-  <grid id="27dc6" binding="appMain" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="appMain" layout-manager="GridLayoutManager" row-count="11" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="492" height="250"/>
+      <xy x="20" y="20" width="592" height="599"/>
     </constraints>
     <properties>
       <autoscrolls value="true"/>
@@ -11,27 +11,16 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="42fa6" class="javax.swing.JButton" binding="impostazioniButton" default-binding="true">
+      <component id="c9caa" class="javax.swing.JButton" binding="BTNConfigConfirm">
         <constraints>
-          <grid row="0" column="0" row-span="4" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="142" height="32"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-2430744"/>
-          <hideActionText value="false"/>
-          <text value="Impostazioni"/>
-        </properties>
-      </component>
-      <component id="c9caa" class="javax.swing.JButton" binding="INIZIAButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="318" height="32"/>
           </grid>
         </constraints>
         <properties>
+          <actionCommand value=" Conferma Configurazione"/>
           <background color="-2430744"/>
-          <enabled value="false"/>
+          <enabled value="true"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="2"/>
           <text value=" INIZIA"/>
@@ -39,8 +28,8 @@
       </component>
       <component id="2c30b" class="javax.swing.JButton" binding="BTNchoooseStudent">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="318" height="32"/>
+          <grid row="8" column="1" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="318" height="37"/>
           </grid>
         </constraints>
         <properties>
@@ -53,12 +42,74 @@
       </component>
       <component id="55940" class="javax.swing.JButton" binding="BTNchooseClass">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-2430744"/>
           <text value="Scegli Classe"/>
         </properties>
       </component>
+      <component id="3d6c9" class="javax.swing.JList" binding="chooseClassList">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <scrollpane id="771e">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="625a9" class="javax.swing.JList" binding="chooseStudentList">
+            <constraints/>
+            <properties>
+              <enabled value="true"/>
+            </properties>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="42fa6" class="javax.swing.JButton" binding="impostazioniButton" default-binding="true">
+        <constraints>
+          <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="142" height="32"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-2430744"/>
+          <hideActionText value="false"/>
+          <horizontalTextPosition value="4"/>
+          <text value="Impostazioni"/>
+        </properties>
+      </component>
+      <hspacer id="4a85f">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="66191">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <hspacer id="9bfc9">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <vspacer id="5a417">
+        <constraints>
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="1df21">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
